[project]
name = "activecommunities"
version = "0.1.0"
description = "Active Communities - Ultra Swim 6 Registration Automation"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.51.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
